--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@
 /WatchLk.ProductProcessing.Infrastructure/obj
 /WatchLk.ProductService/bin/Debug/net8.0
 /WatchLk.ProductService/obj
+/WatchLk.ProductService.Api/bin/Debug/net8.0
+/WatchLk.ProductService.Api/obj
