Jwt functionality added

--- a/WatchLk.AuthProcessing.Api/appsettings.json
+++ b/WatchLk.AuthProcessing.Api/appsettings.json
@@ -9,5 +9,10 @@
   "ConnectionStrings": {
     "AuthDbString": "Server=DESKTOP-E11JVDM\\SQLEXPRESS;Initial Catalog=WatchLk_AuthServiceDb;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
   },
+  "Jwt": {
+    "key": "NoBoDyCanFuCkWiThThIsJwTsEcReT!!",
+    "Issuer": "http://localhost:7002",
+    "Audience": "http://localhost:7002"
+  },
   "AllowedHosts": "*"
 }
